--- a/.github/workflows/relase.yml
+++ b/.github/workflows/relase.yml
@@ -6,7 +6,8 @@ on:
       - master
 
 permissions:
-  contents: write  # 用于发布 Release
+  contents: write       # ✅ 允许写 tag、写 changelog
+  pull-requests: write  # ✅ 允许创建 PR
 
 jobs:
   release:
@@ -22,6 +23,6 @@ jobs:
           node-version: 20
 
       - name: Release Please
-        uses: google-github-actions/release-please-action@v4
+        uses: googleapis/release-please-action@v4  # ✅ 已修正 deprecated
         with:
           release-type: simple
