--- a/.github/workflows/relase.yml
+++ b/.github/workflows/relase.yml
@@ -23,6 +23,8 @@ jobs:
           node-version: 20
 
       - name: Release Please
-        uses: googleapis/release-please-action@v4  # ✅ 已修正 deprecated
+        uses: googleapis/release-please-action@v4
         with:
+          token: ${{ secrets.GH_TOKEN }}
           release-type: simple
+
